2014-01-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/graphics.c (get_arrow, do_ellipse) src/graph3d.c (get_arrow3d)
	src/term.c (do_arc):  The aspect ratio of the internal coordinates
	of the windows terminal is always one. 
	Bug #1253

	* src/win/wtext.c (WndTextProc) src/fit.c (regress):  The ctrlc_flag
	got clobbered due to a missing break statement.

2013-12-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph) term/win.trm (WIN_filled_polygon):
	Rectangular filled polygons are drawn using boxfill. This routine
	contained a bug in the allocation of an internal bitmap which prevented
	those polygons from being drawn under certain circumstances. The 
	routine was also sensitive to the order of the corner points.
	Bug #1279

	* unset.c (reset_command):  Reinitialize axis labels after copying the
	default axis structure. Fixes default text orientation of y- and color-
	axes.

2013-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Restore the --enable-backwards-compatibility 
	configuration option and apply it to syntax that has been deprecated but
	can still be supported for running old scripts (i.e. scripts that do not
	also use recent syntax that would conflict with the deprecated commands).

	* src/datafile.c:  backwards compatibility support for "thru"

	* src/set.c src/gadgets.c src/gadgets.h src/save.c src/unset.c:
	backwards compatibility support for "set style increment user"

	* src/misc.c src/scanner.c src/command.h:  New mechanism for call
	arguments (ARG0 ... ARGN) replaces old mechanism ($0 $1 ... $N).
	The old method is still available via --enable-backwards-compatibility

	* demo/callargs.dem demo/all.dem docs/gnuplot.doc: docs and demo for
	new call argument method

2013-12-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/stdfn.c config/mingw/Makefile:  Some versions of MinGW are missing
	a cexp() implementation. Supply our own.

	* config/mingw/Makefile:  Create timestamp.h for non-release builds.
	